--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -192,7 +192,7 @@ acceptors.
 Returning to the example, initially no other value has been accepted, so
 the acceptors all send back a \texttt{Promise} with no value, and the
 proposer sends an \texttt{Accept} containing its value, say
-\texttt{operation(name='deposit', amount=100.00, destination\_account='Michael DiBernardo')}.
+\texttt{operation(name='deposit', amount=100.00, destination\_account='Mike DiBernardo')}.
 
 If another proposer later initiates a ballot with a lower ballot number
 and a different operation (say, a transfer to acount
@@ -333,7 +333,8 @@ Let's get started.
 \aosasectii{Types and Constants}\label{types-and-constants}
 
 Cluster's protocol uses fifteen different message types, each defined as
-a Python \texttt{namedtuple}.
+a Python
+\href{https://docs.python.org/3/library/collections.html}{\texttt{namedtuple}}.
 
 \begin{verbatim}
 
@@ -449,7 +450,8 @@ of the \texttt{Network} class.
         def __init__(self, network, address):
             self.network = network
             self.address = address or 'N%d' % self.unique_ids.next()
-            self.logger = SimTimeLogger(logging.getLogger(self.address), {'network': self.network})
+            self.logger = SimTimeLogger(
+                logging.getLogger(self.address), {'network': self.network})
             self.logger.info('starting')
             self.roles = []
             self.send = functools.partial(self.network.send, self)
@@ -489,32 +491,33 @@ the machine's output. The method uses a simple synchronized
 
 \begin{verbatim}
 
-    class Member(object):
-    
-        def __init__(self, state_machine, network, peers, seed=None,
-                     seed_cls=Seed, bootstrap_cls=Bootstrap):
-            self.network = network
-            self.node = network.new_node()
-            if seed is not None:
-                self.startup_role = seed_cls(self.node, initial_state=seed, peers=peers,
-                                          execute_fn=state_machine)
-            else:
-                self.startup_role = bootstrap_cls(self.node, execute_fn=state_machine, peers=peers)
-            self.requester = None
-    
-        def start(self):
-            self.startup_role.start()
-            self.thread = threading.Thread(target=self.network.run)
-            self.thread.start()
-    
-        def invoke(self, input_value, request_cls=Requester):
-            assert self.requester is None
-            q = Queue.Queue()
-            self.requester = request_cls(self.node, input_value, q.put)
-            self.requester.start()
-            output = q.get()
-            self.requester = None
-            return output
+class Member(object):
+
+    def __init__(self, state_machine, network, peers, seed=None,
+                 seed_cls=Seed, bootstrap_cls=Bootstrap):
+        self.network = network
+        self.node = network.new_node()
+        if seed is not None:
+            self.startup_role = seed_cls(self.node, initial_state=seed, peers=peers,
+                                      execute_fn=state_machine)
+        else:
+            self.startup_role = bootstrap_cls(self.node,
+                                      execute_fn=state_machine, peers=peers)
+        self.requester = None
+
+    def start(self):
+        self.startup_role.start()
+        self.thread = threading.Thread(target=self.network.run)
+        self.thread.start()
+
+    def invoke(self, input_value, request_cls=Requester):
+        assert self.requester is None
+        q = Queue.Queue()
+        self.requester = request_cls(self.node, input_value, q.put)
+        self.requester.start()
+        output = q.get()
+        self.requester = None
+        return output
     
 \end{verbatim}
 
@@ -536,31 +539,33 @@ addition of slot numbers to the messages.
 
 \begin{verbatim}
 
-    class Acceptor(Role):
-    
-        def __init__(self, node):
-            super(Acceptor, self).__init__(node)
-            self.ballot_num = NULL_BALLOT
-            self.accepted_proposals = {}  # {slot: (ballot_num, proposal)}
-    
-        def do_Prepare(self, sender, ballot_num):
-            if ballot_num > self.ballot_num:
-                self.ballot_num = ballot_num
-                # we've heard from a scout, so it might be the next leader
-                self.node.send([self.node.address], Accepting(leader=sender))
-    
-            self.node.send([sender], Promise(ballot_num=self.ballot_num, accepted_proposals=self.accepted_proposals))
-    
-        def do_Accept(self, sender, ballot_num, slot, proposal):
-            if ballot_num >= self.ballot_num:
-                self.ballot_num = ballot_num
-                acc = self.accepted_proposals
-                if slot not in acc or acc[slot][0] < ballot_num:
-                    acc[slot] = (ballot_num, proposal)
-    
-            self.node.send([sender], Accepted(
-                slot=slot, ballot_num=self.ballot_num))
-    
+class Acceptor(Role):
+
+    def __init__(self, node):
+        super(Acceptor, self).__init__(node)
+        self.ballot_num = NULL_BALLOT
+        self.accepted_proposals = {}  # {slot: (ballot_num, proposal)}
+
+    def do_Prepare(self, sender, ballot_num):
+        if ballot_num > self.ballot_num:
+            self.ballot_num = ballot_num
+            # we've heard from a scout, so it might be the next leader
+            self.node.send([self.node.address], Accepting(leader=sender))
+
+        self.node.send([sender], Promise(
+            ballot_num=self.ballot_num, 
+            accepted_proposals=self.accepted_proposals
+        ))
+
+    def do_Accept(self, sender, ballot_num, slot, proposal):
+        if ballot_num >= self.ballot_num:
+            self.ballot_num = ballot_num
+            acc = self.accepted_proposals
+            if slot not in acc or acc[slot][0] < ballot_num:
+                acc[slot] = (ballot_num, proposal)
+
+        self.node.send([sender], Accepted(
+            slot=slot, ballot_num=self.ballot_num))
 \end{verbatim}
 
 \aosasectiii{Replica}\label{replica}
@@ -627,64 +632,43 @@ proposals, performing no transition for that slot.
 Replicas need to know which node is the active leader in order to send
 \texttt{Propose} messages to it. There is a surprising amount of
 subtlety required to get this right, as we'll see later. Each replica
-tracks the active leader using three sources of information:
+tracks the active leader using three sources of information.
 
-\begin{aosaitemize}
-
-\item
-  When the leader role becomes active, it sends an \texttt{Adopted}
-  message to the replica on the same node.
-\end{aosaitemize}
-
-```
+When the leader role becomes active, it sends an \texttt{Adopted}
+message to the replica on the same node.
 
 \begin{verbatim}
+
                               Local 
   Leader      ----------     Replica
     *--->>---/ Adopted /--------+
              ----------
 \end{verbatim}
 
-```
-
-\begin{aosaitemize}
-
-\item
-  When the acceptor role sends a \texttt{Promise} to a new leader, it
-  sends an \texttt{Accepting} message to its local replica.
-\end{aosaitemize}
-
-```
+When the acceptor role sends a \texttt{Promise} to a new leader, it
+sends an \texttt{Accepting} message to its local replica.
 
 \begin{verbatim}
+
                                 Local 
   Acceptor     ------------    Replica
       *--->>--/ Accepting /-------+
               ------------
 \end{verbatim}
 
-```
-
-\begin{aosaitemize}
-
-\item
-  The active leader sends \texttt{Active} messages as a heartbeat. If no
-  such message arrives before the \texttt{LEADER\_TIMEOUT} expires, the
-  replica assumes the leader is dead and moves on to the next leader. In
-  this case, it's important that all replicas choose the \emph{same} new
-  leader, which we accomplish by sorting the members and selecting the
-  next one in the list.
-\end{aosaitemize}
-
-```
+The active leader sends \texttt{Active} messages as a heartbeat. If no
+such message arrives before the \texttt{LEADER\_TIMEOUT} expires, the
+replica assumes the leader is dead and moves on to the next leader. In
+this case, it's important that all replicas choose the \emph{same} new
+leader, which we accomplish by sorting the members and selecting the
+next one in the list.
 
 \begin{verbatim}
+
   Leader      ---------    Replica   Replica   Replica
      *--->>--/ Active /-------+---------+---------+
              ---------
 \end{verbatim}
-
-```
 
 Finally, when a node joins the network, the bootstrap role sends a
 \texttt{Join} message. The replica responds with a \texttt{Welcome}
@@ -693,126 +677,129 @@ up to speed quickly.
 
 \begin{verbatim}
 
-    Bootstrap   -------    Replica   Replica   Replica
-        *-->>--/ Join /-------+---------+---------+
-        :      -------        :         :         :
-        :     ----------      :         :         :
-        +----/ Welcome /--<<--*         :         :
-             ----------                 :         :
-                   ----------           :         :
-        +---------/ Welcome /----<<-----*         :
-                  ----------                      :
-                        ----------                :
-        +--------------/ Welcome /------<<--------*
-                       ----------
+  Bootstrap   -------    Replica   Replica   Replica
+      *-->>--/ Join /-------+---------+---------+
+      :      -------        :         :         :
+      :     ----------      :         :         :
+      +----/ Welcome /--<<--*         :         :
+           ----------                 :         :
+                 ----------           :         :
+      +---------/ Welcome /----<<-----*         :
+                ----------                      :
+                      ----------                :
+      +--------------/ Welcome /------<<--------*
+                     ----------
 \end{verbatim}
 
 \begin{verbatim}
 
-    class Replica(Role):
-    
-        def __init__(self, node, execute_fn, state, slot, decisions, peers):
-            super(Replica, self).__init__(node)
-            self.execute_fn = execute_fn
-            self.state = state
-            self.slot = slot
-            self.decisions = decisions.copy()
-            self.peers = peers
-            self.proposals = {}
-            # next slot num for a proposal (may lead slot)
-            self.next_slot = slot
-            self.latest_leader = None
-            self.latest_leader_timeout = None
-    
-        # making proposals
-    
-        def do_Invoke(self, sender, caller, client_id, input_value):
-            proposal = Proposal(caller, client_id, input_value)
-            slot = next((s for s, p in self.proposals.iteritems() if p == proposal), None)
-            # propose, or re-propose if this proposal already has a slot
-            self.propose(proposal, slot)
-    
-        def propose(self, proposal, slot=None):
-            """Send (or resend, if slot is specified) a proposal to the leader"""
-            if not slot:
-                slot, self.next_slot = self.next_slot, self.next_slot + 1
-            self.proposals[slot] = proposal
-            # find a leader we think is working - either the latest we know of, or
-            # ourselves (which may trigger a scout to make us the leader)
-            leader = self.latest_leader or self.node.address
-            self.logger.info("proposing %s at slot %d to leader %s" % (proposal, slot, leader))
-            self.node.send([leader], Propose(slot=slot, proposal=proposal))
-    
-        # handling decided proposals
-    
-        def do_Decision(self, sender, slot, proposal):
-            assert not self.decisions.get(self.slot, None), \
-                    "next slot to commit is already decided"
-            if slot in self.decisions:
-                assert self.decisions[slot] == proposal, \
-                    "slot %d already decided with %r!" % (slot, self.decisions[slot])
-                return
-            self.decisions[slot] = proposal
-            self.next_slot = max(self.next_slot, slot + 1)
-    
-            # re-propose our proposal in a new slot if it lost its slot and wasn't a no-op
-            our_proposal = self.proposals.get(slot)
-            if our_proposal is not None and our_proposal != proposal and our_proposal.caller:
-                self.propose(our_proposal)
-    
-            # execute any pending, decided proposals
-            while True:
-                commit_proposal = self.decisions.get(self.slot)
-                if not commit_proposal:
-                    break  # not decided yet
-                commit_slot, self.slot = self.slot, self.slot + 1
-    
-                self.commit(commit_slot, commit_proposal)
-    
-        def commit(self, slot, proposal):
-            """Actually commit a proposal that is decided and in sequence"""
-            decided_proposals = [p for s, p in self.decisions.iteritems() if s < slot]
-            if proposal in decided_proposals:
-                self.logger.info("not committing duplicate proposal %r at slot %d", proposal, slot)
-                return  # duplicate
-    
-            self.logger.info("committing %r at slot %d" % (proposal, slot))
-            if proposal.caller is not None:
-                # perform a client operation
-                self.state, output = self.execute_fn(self.state, proposal.input)
-                self.node.send([proposal.caller], Invoked(client_id=proposal.client_id, output=output))
-    
-        # tracking the leader
-    
-        def do_Adopted(self, sender, ballot_num, accepted_proposals):
-            self.latest_leader = self.node.address
-            self.leader_alive()
-    
-        def do_Accepting(self, sender, leader):
-            self.latest_leader = leader
-            self.leader_alive()
-    
-        def do_Active(self, sender):
-            if sender != self.latest_leader:
-                return
-            self.leader_alive()
-    
-        def leader_alive(self):
-            if self.latest_leader_timeout:
-                self.latest_leader_timeout.cancel()
-    
-            def reset_leader():
-                idx = self.peers.index(self.latest_leader)
-                self.latest_leader = self.peers[(idx + 1) % len(self.peers)]
-                self.logger.debug("leader timed out; tring the next one, %s", self.latest_leader)
-            self.latest_leader_timeout = self.set_timer(LEADER_TIMEOUT, reset_leader)
-    
-        # adding new cluster members
-    
-        def do_Join(self, sender):
-            if sender in self.peers:
-                self.node.send([sender], Welcome(
-                    state=self.state, slot=self.slot, decisions=self.decisions))
+class Replica(Role):
+
+    def __init__(self, node, execute_fn, state, slot, decisions, peers):
+        super(Replica, self).__init__(node)
+        self.execute_fn = execute_fn
+        self.state = state
+        self.slot = slot
+        self.decisions = decisions.copy()
+        self.peers = peers
+        self.proposals = {}
+        # next slot num for a proposal (may lead slot)
+        self.next_slot = slot
+        self.latest_leader = None
+        self.latest_leader_timeout = None
+
+    # making proposals
+
+    def do_Invoke(self, sender, caller, client_id, input_value):
+        proposal = Proposal(caller, client_id, input_value)
+        slot = next((s for s, p in self.proposals.iteritems() if p == proposal), None)
+        # propose, or re-propose if this proposal already has a slot
+        self.propose(proposal, slot)
+
+    def propose(self, proposal, slot=None):
+        """Send (or resend, if slot is specified) a proposal to the leader"""
+        if not slot:
+            slot, self.next_slot = self.next_slot, self.next_slot + 1
+        self.proposals[slot] = proposal
+        # find a leader we think is working - either the latest we know of, or
+        # ourselves (which may trigger a scout to make us the leader)
+        leader = self.latest_leader or self.node.address
+        self.logger.info("proposing %s at slot %d to leader %s" % (proposal, slot, leader))
+        self.node.send([leader], Propose(slot=slot, proposal=proposal))
+
+    # handling decided proposals
+
+    def do_Decision(self, sender, slot, proposal):
+        assert not self.decisions.get(self.slot, None), \
+                "next slot to commit is already decided"
+        if slot in self.decisions:
+            assert self.decisions[slot] == proposal, \
+                "slot %d already decided with %r!" % (slot, self.decisions[slot])
+            return
+        self.decisions[slot] = proposal
+        self.next_slot = max(self.next_slot, slot + 1)
+
+        # re-propose our proposal in a new slot if it lost its slot and wasn't a no-op
+        our_proposal = self.proposals.get(slot)
+        if our_proposal is not None and our_proposal != proposal and our_proposal.caller:
+            self.propose(our_proposal)
+
+        # execute any pending, decided proposals
+        while True:
+            commit_proposal = self.decisions.get(self.slot)
+            if not commit_proposal:
+                break  # not decided yet
+            commit_slot, self.slot = self.slot, self.slot + 1
+
+            self.commit(commit_slot, commit_proposal)
+
+    def commit(self, slot, proposal):
+        """Actually commit a proposal that is decided and in sequence"""
+        decided_proposals = [p for s, p in self.decisions.iteritems() if s < slot]
+        if proposal in decided_proposals:
+            self.logger.info(
+                "not committing duplicate proposal %r, slot %d", proposal, slot)
+            return  # duplicate
+
+        self.logger.info("committing %r at slot %d" % (proposal, slot))
+        if proposal.caller is not None:
+            # perform a client operation
+            self.state, output = self.execute_fn(self.state, proposal.input)
+            self.node.send([proposal.caller], 
+                Invoked(client_id=proposal.client_id, output=output))
+
+    # tracking the leader
+
+    def do_Adopted(self, sender, ballot_num, accepted_proposals):
+        self.latest_leader = self.node.address
+        self.leader_alive()
+
+    def do_Accepting(self, sender, leader):
+        self.latest_leader = leader
+        self.leader_alive()
+
+    def do_Active(self, sender):
+        if sender != self.latest_leader:
+            return
+        self.leader_alive()
+
+    def leader_alive(self):
+        if self.latest_leader_timeout:
+            self.latest_leader_timeout.cancel()
+
+        def reset_leader():
+            idx = self.peers.index(self.latest_leader)
+            self.latest_leader = self.peers[(idx + 1) % len(self.peers)]
+            self.logger.debug("leader timed out; tring the next one, %s", 
+                self.latest_leader)
+        self.latest_leader_timeout = self.set_timer(LEADER_TIMEOUT, reset_leader)
+
+    # adding new cluster members
+
+    def do_Join(self, sender):
+        if sender in self.peers:
+            self.node.send([sender], Welcome(
+                state=self.state, slot=self.slot, decisions=self.decisions))
     
 \end{verbatim}
 
@@ -831,64 +818,64 @@ scout and commander roles to carry out each portion of the protocol.
 
 \begin{verbatim}
 
-    class Leader(Role):
-    
-        def __init__(self, node, peers, commander_cls=Commander, scout_cls=Scout):
-            super(Leader, self).__init__(node)
-            self.ballot_num = Ballot(0, node.address)
-            self.active = False
-            self.proposals = {}
-            self.commander_cls = commander_cls
-            self.scout_cls = scout_cls
+class Leader(Role):
+
+    def __init__(self, node, peers, commander_cls=Commander, scout_cls=Scout):
+        super(Leader, self).__init__(node)
+        self.ballot_num = Ballot(0, node.address)
+        self.active = False
+        self.proposals = {}
+        self.commander_cls = commander_cls
+        self.scout_cls = scout_cls
+        self.scouting = False
+        self.peers = peers
+
+    def start(self):
+        # reminder others we're active before LEADER_TIMEOUT expires
+        def active():
+            if self.active:
+                self.node.send(self.peers, Active())
+            self.set_timer(LEADER_TIMEOUT / 2.0, active)
+        active()
+
+    def spawn_scout(self):
+        assert not self.scouting
+        self.scouting = True
+        self.scout_cls(self.node, self.ballot_num, self.peers).start()
+
+    def do_Adopted(self, sender, ballot_num, accepted_proposals):
+        self.scouting = False
+        self.proposals.update(accepted_proposals)
+        # note that we don't re-spawn commanders here; if there are undecided
+        # proposals, the replicas will re-propose
+        self.logger.info("leader becoming active")
+        self.active = True
+
+    def spawn_commander(self, ballot_num, slot):
+        proposal = self.proposals[slot]
+        self.commander_cls(self.node, ballot_num, slot, proposal, self.peers).start()
+
+    def do_Preempted(self, sender, slot, preempted_by):
+        if not slot:  # from the scout
             self.scouting = False
-            self.peers = peers
-    
-        def start(self):
-            # reminder others we're active before LEADER_TIMEOUT expires
-            def active():
-                if self.active:
-                    self.node.send(self.peers, Active())
-                self.set_timer(LEADER_TIMEOUT / 2.0, active)
-            active()
-    
-        def spawn_scout(self):
-            assert not self.scouting
-            self.scouting = True
-            self.scout_cls(self.node, self.ballot_num, self.peers).start()
-    
-        def do_Adopted(self, sender, ballot_num, accepted_proposals):
-            self.scouting = False
-            self.proposals.update(accepted_proposals)
-            # note that we don't re-spawn commanders here; if there are undecided
-            # proposals, the replicas will re-propose
-            self.logger.info("leader becoming active")
-            self.active = True
-    
-        def spawn_commander(self, ballot_num, slot):
-            proposal = self.proposals[slot]
-            self.commander_cls(self.node, ballot_num, slot, proposal, self.peers).start()
-    
-        def do_Preempted(self, sender, slot, preempted_by):
-            if not slot:  # from the scout
-                self.scouting = False
-            self.logger.info("leader preempted by %s", preempted_by.leader)
-            self.active = False
-            self.ballot_num = Ballot((preempted_by or self.ballot_num).n + 1, self.ballot_num.leader)
-    
-        def do_Propose(self, sender, slot, proposal):
-            if slot not in self.proposals:
-                if self.active:
-                    self.proposals[slot] = proposal
-                    self.logger.info("spawning commander for slot %d" % (slot,))
-                    self.spawn_commander(self.ballot_num, slot)
-                else:
-                    if not self.scouting:
-                        self.logger.info("got PROPOSE when not active - scouting")
-                        self.spawn_scout()
-                    else:
-                        self.logger.info("got PROPOSE while scouting; ignored")
+        self.logger.info("leader preempted by %s", preempted_by.leader)
+        self.active = False
+        self.ballot_num = Ballot((preempted_by or self.ballot_num).n + 1, self.ballot_num.leader)
+
+    def do_Propose(self, sender, slot, proposal):
+        if slot not in self.proposals:
+            if self.active:
+                self.proposals[slot] = proposal
+                self.logger.info("spawning commander for slot %d" % (slot,))
+                self.spawn_commander(self.ballot_num, slot)
             else:
-                self.logger.info("got PROPOSE for a slot already being proposed")
+                if not self.scouting:
+                    self.logger.info("got PROPOSE when not active - scouting")
+                    self.spawn_scout()
+                else:
+                    self.logger.info("got PROPOSE while scouting; ignored")
+        else:
+            self.logger.info("got PROPOSE for a slot already being proposed")
     
 \end{verbatim}
 
