--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -132,40 +132,11 @@ proposer's goal is to get a majority of cluster members, acting as
 acceptors, to accept its value, but only if another value has not
 already been decided.
 
-A single ballot looks like this:
+\aosafigure{cluster-images/ballot.png}{A Ballot}{500l.cluster.ballot}
 
-\begin{verbatim}
-
-Proposer      -------------------------     Acceptor        Acceptor        Acceptor
-   *--->>----/ Prepare(ballot_num=..) /--------+---------------+---------------+
-   :         -------------------------         :               :               :
-   :    -----------------------------------    :               :               :
-   +---/ Promise(ballot_num=.., value=..) /-<<-*               :               :
-   :   -----------------------------------                     :               :
-   :            -----------------------------------            :               :
-   +-----------/ Promise(ballot_num=.., value=..) /-----<<-----*               :
-   :           -----------------------------------                             :
-   :                    -----------------------------------                    :
-   +-------------------/ Promise(ballot_num=.., value=..) /---------<<---------*
-   :                   -----------------------------------      
-   :
-   :       -----------------------------------
-   *--->>--/ Accept(ballot_num=.., value=..) /-+---------------+---------------+
-   :      -----------------------------------  :               :               :
-   :        --------------------------         :               :               :
-   +-------/ Accepted(ballot_num=..) /---<<----*               :               :
-   :       --------------------------                          :               :
-   :                --------------------------                 :               :
-   +---------------/ Accepted(ballot_num=..) /-------<<--------*               :
-   :               --------------------------                                  :
-   :                        --------------------------                         :
-   +-----------------------/ Accepted(ballot_num=..) /-----------<<------------*
-                           --------------------------      
-\end{verbatim}
-
-The ballot begins with the proposer sending a \texttt{Prepare} message
+A ballot begins with the proposer sending a \texttt{Prepare} message
 with the ballot number \emph{N} to the acceptors and waiting to hear
-from a majority.
+from a majority (\aosafigref{500l.cluster.ballot}.)
 
 The \texttt{Prepare} message is a request for the accepted value (if
 any) with the highest ballot number less than \emph{N}. Acceptors
